src/parser/SQLParser.cpp

// Generated from .\SQL.g4 by ANTLR 4.11.1


#include "SQLVisitor.h"

#include "SQLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SQLParserStaticData final {
  SQLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SQLParserStaticData(const SQLParserStaticData&) = delete;
  SQLParserStaticData(SQLParserStaticData&&) = delete;
  SQLParserStaticData& operator=(const SQLParserStaticData&) = delete;
  SQLParserStaticData& operator=(SQLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sqlParserOnceFlag;
SQLParserStaticData *sqlParserStaticData = nullptr;

void sqlParserInitialize() {
  assert(sqlParserStaticData == nullptr);
  auto staticData = std::make_unique<SQLParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "dbStatement", "ioStatement", "tableStatement", 
      "selectTable", "alterStatement", "fieldList", "field", "type", "valueLists", 
      "valueList", "value", "whereAndClause", "whereClause", "column", "expression", 
      "setClause", "selectors", "selector", "identifiers", "operator_", 
      "aggregator"
    },
    std::vector<std::string>{
      "", "';'", "'CREATE'", "'DATABASE'", "'DROP'", "'SHOW'", "'DATABASES'", 
      "'USE'", "'TABLES'", "'INDEXES'", "'LOAD'", "'FROM'", "'FILE'", "'TO'", 
      "'TABLE'", "'DUMP'", "'('", "')'", "'DESC'", "'INSERT'", "'INTO'", 
      "'VALUES'", "'DELETE'", "'WHERE'", "'UPDATE'", "'SET'", "'SELECT'", 
      "'GROUP'", "'BY'", "'LIMIT'", "'OFFSET'", "'ALTER'", "'ADD'", "'INDEX'", 
      "'PRIMARY'", "'KEY'", "'FOREIGN'", "'CONSTRAINT'", "'REFERENCES'", 
      "'UNIQUE'", "','", "'NOT'", "'DEFAULT'", "'INT'", "'VARCHAR'", "'FLOAT'", 
      "'AND'", "'IS'", "'IN'", "'LIKE'", "'.'", "'*'", "'='", "'<'", "'<='", 
      "'>'", "'>='", "'<>'", "'COUNT'", "'AVG'", "'MAX'", "'MIN'", "'SUM'", 
      "'NULL'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "EqualOrAssign", "Less", "LessEqual", "Greater", "GreaterEqual", 
      "NotEqual", "Count", "Average", "Max", "Min", "Sum", "Null", "Identifier", 
      "Integer", "String", "Float", "Whitespace", "Annotation"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sqlParserStaticData = staticData.release();
}

}

SQLParser::SQLParser(TokenStream *input) : SQLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SQLParser::SQLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SQLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sqlParserStaticData->atn, sqlParserStaticData->decisionToDFA, sqlParserStaticData->sharedContextCache, options);
}

SQLParser::~SQLParser() {
  delete _interpreter;
}

const atn::ATN& SQLParser::getATN() const {
  return *sqlParserStaticData->atn;
}

std::string SQLParser::getGrammarFileName() const {
  return "SQL.g4";
}

const std::vector<std::string>& SQLParser::getRuleNames() const {
  return sqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& SQLParser::getVocabulary() const {
  return sqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SQLParser::getSerializedATN() const {
  return sqlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

SQLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::ProgramContext::EOF() {
  return getToken(SQLParser::EOF, 0);
}

std::vector<SQLParser::StatementContext *> SQLParser::ProgramContext::statement() {
  return getRuleContexts<SQLParser::StatementContext>();
}

SQLParser::StatementContext* SQLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<SQLParser::StatementContext>(i);
}


size_t SQLParser::ProgramContext::getRuleIndex() const {
  return SQLParser::RuleProgram;
}


std::any SQLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::ProgramContext* SQLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -9223372034618391372) != 0 || _la == SQLParser::Annotation) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(SQLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SQLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::DbStatementContext* SQLParser::StatementContext::dbStatement() {
  return getRuleContext<SQLParser::DbStatementContext>(0);
}

SQLParser::IoStatementContext* SQLParser::StatementContext::ioStatement() {
  return getRuleContext<SQLParser::IoStatementContext>(0);
}

SQLParser::TableStatementContext* SQLParser::StatementContext::tableStatement() {
  return getRuleContext<SQLParser::TableStatementContext>(0);
}

SQLParser::AlterStatementContext* SQLParser::StatementContext::alterStatement() {
  return getRuleContext<SQLParser::AlterStatementContext>(0);
}

tree::TerminalNode* SQLParser::StatementContext::Annotation() {
  return getToken(SQLParser::Annotation, 0);
}

tree::TerminalNode* SQLParser::StatementContext::Null() {
  return getToken(SQLParser::Null, 0);
}


size_t SQLParser::StatementContext::getRuleIndex() const {
  return SQLParser::RuleStatement;
}


std::any SQLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::StatementContext* SQLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(54);
      dbStatement();
      setState(55);
      match(SQLParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      ioStatement();
      setState(58);
      match(SQLParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(60);
      tableStatement();
      setState(61);
      match(SQLParser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(63);
      alterStatement();
      setState(64);
      match(SQLParser::T__0);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(66);
      match(SQLParser::Annotation);
      setState(67);
      match(SQLParser::T__0);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(68);
      match(SQLParser::Null);
      setState(69);
      match(SQLParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DbStatementContext ------------------------------------------------------------------

SQLParser::DbStatementContext::DbStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SQLParser::DbStatementContext::getRuleIndex() const {
  return SQLParser::RuleDbStatement;
}

void SQLParser::DbStatementContext::copyFrom(DbStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DropDbContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::DropDbContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::DropDbContext::DropDbContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::DropDbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDropDb(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UseDbContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::UseDbContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::UseDbContext::UseDbContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::UseDbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitUseDb(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ShowIndexesContext ------------------------------------------------------------------

SQLParser::ShowIndexesContext::ShowIndexesContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::ShowIndexesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitShowIndexes(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CreateDbContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::CreateDbContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::CreateDbContext::CreateDbContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::CreateDbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitCreateDb(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ShowTablesContext ------------------------------------------------------------------

SQLParser::ShowTablesContext::ShowTablesContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::ShowTablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitShowTables(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ShowDbsContext ------------------------------------------------------------------

SQLParser::ShowDbsContext::ShowDbsContext(DbStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::ShowDbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitShowDbs(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::DbStatementContext* SQLParser::dbStatement() {
  DbStatementContext *_localctx = _tracker.createInstance<DbStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLParser::RuleDbStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<SQLParser::CreateDbContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(72);
      match(SQLParser::T__1);
      setState(73);
      match(SQLParser::T__2);
      setState(74);
      match(SQLParser::Identifier);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<SQLParser::DropDbContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(75);
      match(SQLParser::T__3);
      setState(76);
      match(SQLParser::T__2);
      setState(77);
      match(SQLParser::Identifier);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<SQLParser::ShowDbsContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(78);
      match(SQLParser::T__4);
      setState(79);
      match(SQLParser::T__5);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<SQLParser::UseDbContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(80);
      match(SQLParser::T__6);
      setState(81);
      match(SQLParser::Identifier);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<SQLParser::ShowTablesContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(82);
      match(SQLParser::T__4);
      setState(83);
      match(SQLParser::T__7);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<SQLParser::ShowIndexesContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(84);
      match(SQLParser::T__4);
      setState(85);
      match(SQLParser::T__8);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IoStatementContext ------------------------------------------------------------------

SQLParser::IoStatementContext::IoStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SQLParser::IoStatementContext::getRuleIndex() const {
  return SQLParser::RuleIoStatement;
}

void SQLParser::IoStatementContext::copyFrom(IoStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DumpDataContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::DumpDataContext::String() {
  return getToken(SQLParser::String, 0);
}

tree::TerminalNode* SQLParser::DumpDataContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::DumpDataContext::DumpDataContext(IoStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::DumpDataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDumpData(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LoadDataContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::LoadDataContext::String() {
  return getToken(SQLParser::String, 0);
}

tree::TerminalNode* SQLParser::LoadDataContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::LoadDataContext::LoadDataContext(IoStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::LoadDataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitLoadData(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::IoStatementContext* SQLParser::ioStatement() {
  IoStatementContext *_localctx = _tracker.createInstance<IoStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLParser::RuleIoStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::T__9: {
        _localctx = _tracker.createInstance<SQLParser::LoadDataContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(88);
        match(SQLParser::T__9);
        setState(89);
        match(SQLParser::T__10);
        setState(90);
        match(SQLParser::T__11);
        setState(91);
        match(SQLParser::String);
        setState(92);
        match(SQLParser::T__12);
        setState(93);
        match(SQLParser::T__13);
        setState(94);
        match(SQLParser::Identifier);
        break;
      }

      case SQLParser::T__14: {
        _localctx = _tracker.createInstance<SQLParser::DumpDataContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(95);
        match(SQLParser::T__14);
        setState(96);
        match(SQLParser::T__12);
        setState(97);
        match(SQLParser::T__11);
        setState(98);
        match(SQLParser::String);
        setState(99);
        match(SQLParser::T__10);
        setState(100);
        match(SQLParser::T__13);
        setState(101);
        match(SQLParser::Identifier);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TableStatementContext ------------------------------------------------------------------

SQLParser::TableStatementContext::TableStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SQLParser::TableStatementContext::getRuleIndex() const {
  return SQLParser::RuleTableStatement;
}

void SQLParser::TableStatementContext::copyFrom(TableStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CreateTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::CreateTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::FieldListContext* SQLParser::CreateTableContext::fieldList() {
  return getRuleContext<SQLParser::FieldListContext>(0);
}

SQLParser::CreateTableContext::CreateTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::CreateTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitCreateTable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeleteFromTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::DeleteFromTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::WhereAndClauseContext* SQLParser::DeleteFromTableContext::whereAndClause() {
  return getRuleContext<SQLParser::WhereAndClauseContext>(0);
}

SQLParser::DeleteFromTableContext::DeleteFromTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::DeleteFromTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDeleteFromTable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DescribeTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::DescribeTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::DescribeTableContext::DescribeTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::DescribeTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDescribeTable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UpdateTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::UpdateTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::SetClauseContext* SQLParser::UpdateTableContext::setClause() {
  return getRuleContext<SQLParser::SetClauseContext>(0);
}

SQLParser::WhereAndClauseContext* SQLParser::UpdateTableContext::whereAndClause() {
  return getRuleContext<SQLParser::WhereAndClauseContext>(0);
}

SQLParser::UpdateTableContext::UpdateTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::UpdateTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitUpdateTable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SelectTable_Context ------------------------------------------------------------------

SQLParser::SelectTableContext* SQLParser::SelectTable_Context::selectTable() {
  return getRuleContext<SQLParser::SelectTableContext>(0);
}

SQLParser::SelectTable_Context::SelectTable_Context(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::SelectTable_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitSelectTable_(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DropTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::DropTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::DropTableContext::DropTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::DropTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDropTable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InsertIntoTableContext ------------------------------------------------------------------

tree::TerminalNode* SQLParser::InsertIntoTableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::ValueListsContext* SQLParser::InsertIntoTableContext::valueLists() {
  return getRuleContext<SQLParser::ValueListsContext>(0);
}

SQLParser::InsertIntoTableContext::InsertIntoTableContext(TableStatementContext *ctx) { copyFrom(ctx); }


std::any SQLParser::InsertIntoTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitInsertIntoTable(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::TableStatementContext* SQLParser::tableStatement() {
  TableStatementContext *_localctx = _tracker.createInstance<TableStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLParser::RuleTableStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(134);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::T__1: {
        _localctx = _tracker.createInstance<SQLParser::CreateTableContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(104);
        match(SQLParser::T__1);
        setState(105);
        match(SQLParser::T__13);
        setState(106);
        match(SQLParser::Identifier);
        setState(107);
        match(SQLParser::T__15);
        setState(108);
        fieldList();
        setState(109);
        match(SQLParser::T__16);
        break;
      }

      case SQLParser::T__3: {
        _localctx = _tracker.createInstance<SQLParser::DropTableContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(111);
        match(SQLParser::T__3);
        setState(112);
        match(SQLParser::T__13);
        setState(113);
        match(SQLParser::Identifier);
        break;
      }

      case SQLParser::T__17: {
        _localctx = _tracker.createInstance<SQLParser::DescribeTableContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(114);
        match(SQLParser::T__17);
        setState(115);
        match(SQLParser::Identifier);
        break;
      }

      case SQLParser::T__18: {
        _localctx = _tracker.createInstance<SQLParser::InsertIntoTableContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(116);
        match(SQLParser::T__18);
        setState(117);
        match(SQLParser::T__19);
        setState(118);
        match(SQLParser::Identifier);
        setState(119);
        match(SQLParser::T__20);
        setState(120);
        valueLists();
        break;
      }

      case SQLParser::T__21: {
        _localctx = _tracker.createInstance<SQLParser::DeleteFromTableContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(121);
        match(SQLParser::T__21);
        setState(122);
        match(SQLParser::T__10);
        setState(123);
        match(SQLParser::Identifier);
        setState(124);
        match(SQLParser::T__22);
        setState(125);
        whereAndClause();
        break;
      }

      case SQLParser::T__23: {
        _localctx = _tracker.createInstance<SQLParser::UpdateTableContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(126);
        match(SQLParser::T__23);
        setState(127);
        match(SQLParser::Identifier);
        setState(128);
        match(SQLParser::T__24);
        setState(129);
        setClause();
        setState(130);
        match(SQLParser::T__22);
        setState(131);
        whereAndClause();
        break;
      }

      case SQLParser::T__25: {
        _localctx = _tracker.createInstance<SQLParser::SelectTable_Context>(_localctx);
        enterOuterAlt(_localctx, 7);
        setState(133);
        selectTable();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectTableContext ------------------------------------------------------------------

SQLParser::SelectTableContext::SelectTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::SelectorsContext* SQLParser::SelectTableContext::selectors() {
  return getRuleContext<SQLParser::SelectorsContext>(0);
}

SQLParser::IdentifiersContext* SQLParser::SelectTableContext::identifiers() {
  return getRuleContext<SQLParser::IdentifiersContext>(0);
}

SQLParser::WhereAndClauseContext* SQLParser::SelectTableContext::whereAndClause() {
  return getRuleContext<SQLParser::WhereAndClauseContext>(0);
}

SQLParser::ColumnContext* SQLParser::SelectTableContext::column() {
  return getRuleContext<SQLParser::ColumnContext>(0);
}

std::vector<tree::TerminalNode *> SQLParser::SelectTableContext::Integer() {
